--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -611,10 +611,40 @@ Made by MrsBlobby |
     }
 
     // --- create pill with Entitlement: XXX and proper Mini Season tag ---
-    const entmPill = document.createElement('span');
-    entmPill.className = 'pill';
-    entmPill.innerHTML = `Entitlement: ${entmFull}<br>[${tag}]`;
-    condWrap.appendChild(entmPill);
+const entmPill = document.createElement('span');
+entmPill.className = 'pill';
+
+// --- create icon element ---
+const icon = document.createElement('img');
+icon.style.width = '18px';
+icon.style.height = '18px';
+icon.style.verticalAlign = 'middle';
+icon.style.marginRight = '6px';
+
+let textSuffix = '';
+
+// decide icon and suffix based on tag
+if (tag === 'Atomic Shop') {
+    icon.src = 'assets/svg/AtomIcon.svg';
+    textSuffix = ''; // no extra text
+} else if (tag.startsWith('S.C.O.R.E. - Mini Season')) {
+    icon.src = 'assets/svg/SeasonIcon.svg';
+    // extract mini season name from tag
+    const miniMatch = tag.match(/Mini Season (.+)/);
+    if (miniMatch) textSuffix = ` (Mini Season: ${miniMatch[1]})`;
+} else if (tag.startsWith('S.C.O.R.E. - Season')) {
+    icon.src = 'assets/svg/SeasonIcon.svg';
+    const seasonMatch = tag.match(/Season (\d+)/);
+    if (seasonMatch) textSuffix = ` (Season ${seasonMatch[1]})`;
+}
+
+// set pill content: icon + entitlement name + optional suffix
+entmPill.innerHTML = '';
+entmPill.appendChild(icon);
+entmPill.appendChild(document.createTextNode(entmFull + textSuffix));
+
+condWrap.appendChild(entmPill);
+
 }
 
 
