--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -625,10 +625,10 @@ let textSuffix = '';
 
 // decide icon and suffix based on tag
 if (tag === 'Atomic Shop') {
-    icon.src = 'assets/svg/AtomIcon.svg';
+    icon.src = '/assets/svg/AtomIcon.svg';
     textSuffix = ''; // no extra text
 } else if (tag.startsWith('S.C.O.R.E. - Mini Season')) {
-    icon.src = 'assets/svg/SeasonIcon.svg';
+    icon.src = '/assets/svg/SeasonIcon.svg';
     // extract mini season name from tag
     const miniMatch = tag.match(/Mini Season (.+)/);
     if (miniMatch) textSuffix = ` (Mini Season: ${miniMatch[1]})`;
