--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -628,7 +628,7 @@ if (tag === 'Atomic Shop') {
     icon.src = '/assets/AtomIcon.png';
     textSuffix = ''; // no extra text
 } else if (tag.startsWith('S.C.O.R.E. - Mini Season')) {
-    icon.src = '/assets/svg/SeasonIcon.svg';
+    icon.src = '/assets/SeasonIcon.png';
     // extract mini season name from tag
     const miniMatch = tag.match(/Mini Season (.+)/);
     if (miniMatch) textSuffix = ` (Mini Season: ${miniMatch[1]})`;
