--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -586,9 +586,9 @@ if (hasBook) {
   }
 
   // default icon if no manual match
-  if (!iconSet) {
-    icon.src = '/assets/BookIcon.png'; // fallback book icon
-  }
+ // if (!iconSet) {
+ //   icon.src = '/assets/BookIcon.png'; // fallback book icon
+ // }
 
   // set pill content: icon + book name
   bookPill.innerHTML = '';
