--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -613,6 +613,7 @@ if (hasBook) {
     // --- Manual overrides for specific EDID substrings ---
     const ManualEntmIcons = {
         'Babylon_': '/assets/V51Icon.png'
+	'Shelters_': /assets/AtomIcon.png'
         // add more mappings here
     };
 
