--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -612,8 +612,8 @@ if (hasBook) {
 
     // --- Manual overrides for specific EDID substrings ---
     const ManualEntmIcons = {
-        'Babylon_': '/assets/V51Icon.png'
-	'Shelters_': /assets/AtomIcon.png'
+        'Babylon_': '/assets/V51Icon.png';
+	'Shelters_': /assets/AtomIcon.png';
         // add more mappings here
     };
 
