--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -611,11 +611,11 @@ if (hasBook) {
     };
 
     // --- Manual overrides for specific EDID substrings ---
-    const ManualEntmIcons = {
-        'Babylon_': '/assets/V51Icon.png';
-	'Shelters_': /assets/AtomIcon.png';
-        // add more mappings here
-    };
+const ManualEntmIcons = {
+    'Babylon_': '/assets/V51Icon.png',
+    'Shelters_': '/assets/AtomIcon.png'
+};
+
 
     // --- determine tag as before ---
     let tag = '';
